--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ rope = "*"
 pytest = "*"
 isort = {extras = ["pipfile", "requirements"],version = "*"}
 pytest-cov = "*"
+mypy = "*"
 
 [packages]
 
