--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,11 @@
 [bumpversion]
 current_version = 0.1.1
 
+[flake8]
+select = B,B9,BLK,C,E,F,I,W
+ignore = E203,E501,W503
+max-line-length = 80
+
 [isort]
 multi_line_output = 3
 include_trailing_comma = True
@@ -11,3 +16,4 @@ line_length = 88
 [mypy]
 files = simple_imaging,tests
 ignore_missing_imports = true
+
