--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,22 @@
+[metadata]
+name = simple-imaging
+version = 0.1.1
+description = a simple image processing library
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/deadpyxel/digital-image-processing
+author = deadpyxel
+author_email = ghost0092@gmail.com
+license = MIT
+license_file = LICENSE
+classifiers =
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: Implementation :: CPython
+
 [bumpversion]
 current_version = 0.1.1
 
@@ -17,3 +36,5 @@ line_length = 88
 files = simple_imaging,tests
 ignore_missing_imports = true
 
+[pytest]
+python_files = tests.py test_*.py *_tests.py tests/test_*.py
