--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,9 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: Implementation :: CPython
 
+[options]
+python_requires = >=3.7
+
 [bumpversion]
 current_version = 0.1.1
 
@@ -34,7 +37,17 @@ line_length = 88
 
 [mypy]
 files = simple_imaging,tests
-ignore_missing_imports = true
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+
+[mypy-testing.*]
+disallow_untyped_defs = false
+
+[mypy-tests.*]
+disallow_untyped_defs = false
 
 [pytest]
 python_files = tests.py test_*.py *_tests.py tests/test_*.py
