--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = simple-imaging
+name = simple_imaging
 version = 0.1.1
-description = a simple image processing library
+description = a simple digital image processing library
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/deadpyxel/digital-image-processing
+url = https://github.com/deadpyxel/simple_imaging
 author = deadpyxel
 author_email = ghost0092@gmail.com
 license = MIT
@@ -15,39 +15,63 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Programming Language :: Python :: Implementation :: CPython
 
 [options]
+packages = find:
 python_requires = >=3.7
+
+[options.packages.find]
+exclude =
+    tests*
+    testing*
+
+[bdist_wheel]
+universal = True
 
 [bumpversion]
 current_version = 0.1.1
+commit = True
+tag = True
+message = bump: version {current_version} -> {new_version}
+
+[bumpversion:file:setup.cfg]
+search = {current_version}
+replace = {new_version}
+
+[bumpversion:file:README.md]
+search = {current_version}
+replace = {new_version}
 
 [flake8]
-select = B,B9,BLK,C,E,F,I,W
-ignore = E203,E501,W503
+enable-extensions = G
+exclude = .git, .venv, __init__.py
+ignore = E203,E501,W503,S101
 max-line-length = 80
+application-import-names = simple_imaging,tests
 
-[isort]
-multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
-use_parentheses = True
-line_length = 88
+[coverage:run]
+omit = tests/*,main.py,venv/*
+
+[coverage:report]
+show_missing = True
 
 [mypy]
-files = simple_imaging,tests
-check_untyped_defs = true
-disallow_any_generics = true
-disallow_incomplete_defs = true
-disallow_untyped_defs = true
-no_implicit_optional = true
-
-[mypy-testing.*]
-disallow_untyped_defs = false
+files = simple_imaging,tests,main.py
+warn_unused_configs = True
+check_untyped_defs = True
+disallow_any_generics = True
+disallow_incomplete_defs = True
+disallow_untyped_defs = True
+no_implicit_optional = True
 
 [mypy-tests.*]
-disallow_untyped_defs = false
+disallow_untyped_defs = False
 
-[pytest]
-python_files = tests.py test_*.py *_tests.py tests/test_*.py
+[tool:pytest]
+python_files = tests/test_*.py
+markers =
+    fast: marks a test as a fast execution test.
+    slow: marks a test as a slow execution test.
+    adapter: marks a test belonging to the abstraction layer.
