--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ author_email = ghost0092@gmail.com
 license = MIT
 license_file = LICENSE
 classifiers =
+    Development Status :: 3 - Alpha
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
