chore(deps): remove isort dev dependency. Replaced with reoder-python-imports

--- a/Pipfile
+++ b/Pipfile
@@ -12,9 +12,9 @@ mypy = "*"
 pre-commit = "*"
 flake8 = "*"
 flake8-black = "*"
-flake8-isort = "*"
 flake8-bugbear = "*"
-isort = "*"
+flake8-import-order = "*"
+reorder-python-imports = "*"
 
 [packages]
 
