--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,8 +7,10 @@
 
 -i https://pypi.org/simple
 appdirs==1.4.4
+aspy.refactor-imports==2.1.1; python_full_version >= '3.6.1'
 attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 black==20.8b1
+cached-property==1.5.2
 cfgv==3.2.0; python_full_version >= '3.6.1'
 click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 coverage==5.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
@@ -17,10 +19,9 @@ filelock==3.0.12
 flake8==3.8.4
 flake8-black==0.2.1
 flake8-bugbear==20.11.1
-flake8-isort==4.0.0
+flake8-import-order==0.18.1
 identify==1.5.13; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 iniconfig==1.1.1
-isort==5.7.0
 mccabe==0.6.1
 mypy==0.800
 mypy-extensions==0.4.3
@@ -37,9 +38,9 @@ pytest==6.2.2
 pytest-cov==2.11.1
 pyyaml==5.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 regex==2020.11.13
+reorder-python-imports==2.4.0
 rope==0.18.0
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-testfixtures==6.17.1
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
