feat: add gamma transformation. add band highlighting

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,10 @@ replace = {new_version}
 search = {current_version}
 replace = {new_version}
 
+[bumpversion:file:simple_imaging/__init__.py]
+search = {current_version}
+replace = {new_version}
+
 [flake8]
 enable-extensions = G
 exclude = .git, .venv, __init__.py
