--- a/setup.cfg
+++ b/setup.cfg
@@ -57,10 +57,25 @@ max-line-length = 80
 application-import-names = simple_imaging,tests
 
 [coverage:run]
-omit = tests/*,main.py,venv/*
+omit = tests/*,main.py,venv/*,setup.py
 
 [coverage:report]
 show_missing = True
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain about missing debug-only code:
+    def __repr__
+    if self\.debug
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
+    raise NotImplementedError
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if __name__ == .__main__.:
 
 [mypy]
 files = simple_imaging,tests,main.py
