--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,35 +7,35 @@
 
 -i https://pypi.org/simple
 appdirs==1.4.4
-aspy.refactor-imports==2.1.1; python_full_version >= '3.6.1'
+aspy.refactor-imports==2.2.0; python_full_version >= '3.6.1'
 attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 black==20.8b1
 cached-property==1.5.2
 cfgv==3.2.0; python_full_version >= '3.6.1'
 click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-coverage==5.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+coverage==5.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 distlib==0.3.1
 filelock==3.0.12
-flake8==3.8.4
 flake8-black==0.2.1
-flake8-bugbear==20.11.1
+flake8-bugbear==21.3.2
 flake8-import-order==0.18.1
-identify==1.5.13; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+flake8==3.9.0
+identify==2.1.3; python_full_version >= '3.6.1'
 iniconfig==1.1.1
 mccabe==0.6.1
-mypy==0.800
 mypy-extensions==0.4.3
+mypy==0.812
 nodeenv==1.5.0
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pathspec==0.8.1
 pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pre-commit==2.10.1
+pre-commit==2.11.1
 py==1.10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pycodestyle==2.6.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pyflakes==2.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pycodestyle==2.7.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyflakes==2.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytest==6.2.2
 pytest-cov==2.11.1
+pytest==6.2.2
 pyyaml==5.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 regex==2020.11.13
 reorder-python-imports==2.4.0
