--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ flake8-black = "*"
 flake8-bugbear = "*"
 flake8-import-order = "*"
 reorder-python-imports = "*"
+sphinx = "*"
+rinohtype = "*"
 
 [packages]
 
