--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,8 +17,7 @@ certifi==2020.12.5
 cfgv==3.2.0; python_full_version >= '3.6.1'
 chardet==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-commonmark==0.9.1
-coverage==5.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_full_version < '4.0.0'
+coverage==5.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 distlib==0.3.1
 docutils==0.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 filelock==3.0.12
@@ -49,15 +48,9 @@ pytest-cov==2.11.1
 pytest==6.2.2
 pytz==2021.1
 pyyaml==5.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-recommonmark==0.7.1
 regex==2020.11.13
 reorder-python-imports==2.4.0
 requests==2.25.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-rinoh-typeface-dejavuserif==0.1.3
-rinoh-typeface-texgyrecursor==0.1.1
-rinoh-typeface-texgyreheros==0.1.1
-rinoh-typeface-texgyrepagella==0.1.1
-rinohtype==0.5.2
 rope==0.18.0
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 snowballstemmer==2.1.0
@@ -71,5 +64,5 @@ sphinxcontrib-serializinghtml==1.1.4; python_version >= '3.5'
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
-urllib3==1.26.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_full_version < '4.0.0'
+urllib3==1.26.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 virtualenv==20.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
