--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ flake8-bugbear = "*"
 flake8-import-order = "*"
 reorder-python-imports = "*"
 sphinx = "*"
+sphinx-rtd-theme = "*"
 
 [packages]
 
