--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -54,6 +54,7 @@ requests==2.25.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3
 rope==0.18.0
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 snowballstemmer==2.1.0
+sphinx-rtd-theme==0.5.1
 sphinx==3.5.2
 sphinxcontrib-applehelp==1.0.2; python_version >= '3.5'
 sphinxcontrib-devhelp==1.0.2; python_version >= '3.5'
