--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,11 +7,12 @@
 
 -i https://pypi.org/simple
 alabaster==0.7.12
+apipkg==1.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 appdirs==1.4.4
 aspy.refactor-imports==2.2.0; python_full_version >= '3.6.1'
 attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-babel==2.9.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-black==20.8b1
+babel==2.9.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+black==21.4b2
 cached-property==1.5.2
 certifi==2020.12.5
 cfgv==3.2.0; python_full_version >= '3.6.1'
@@ -20,12 +21,13 @@ click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 
 coverage==5.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 distlib==0.3.1
 docutils==0.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+execnet==1.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 filelock==3.0.12
 flake8-black==0.2.1
-flake8-bugbear==21.3.2
+flake8-bugbear==21.4.3
 flake8-import-order==0.18.1
-flake8==3.9.0
-identify==2.1.3; python_full_version >= '3.6.1'
+flake8==3.9.1
+identify==2.2.4; python_full_version >= '3.6.1'
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 imagesize==1.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 iniconfig==1.1.1
@@ -34,28 +36,30 @@ markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 
 mccabe==0.6.1
 mypy-extensions==0.4.3
 mypy==0.812
-nodeenv==1.5.0
+nodeenv==1.6.0
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pathspec==0.8.1
 pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pre-commit==2.11.1
+pre-commit==2.12.1
 py==1.10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pycodestyle==2.7.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pyflakes==2.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyflakes==2.3.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pygments==2.8.1; python_version >= '3.5'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytest-cov==2.11.1
-pytest==6.2.2
+pytest-forked==1.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+pytest-xdist==2.2.1
+pytest==6.2.3
 pytz==2021.1
 pyyaml==5.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-regex==2020.11.13
-reorder-python-imports==2.4.0
+regex==2021.4.4
+reorder-python-imports==2.5.0
 requests==2.25.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-rope==0.18.0
+rope==0.19.0
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 snowballstemmer==2.1.0
-sphinx-rtd-theme==0.5.1
-sphinx==3.5.2
+sphinx-rtd-theme==0.5.2
+sphinx==3.5.4
 sphinxcontrib-applehelp==1.0.2; python_version >= '3.5'
 sphinxcontrib-devhelp==1.0.2; python_version >= '3.5'
 sphinxcontrib-htmlhelp==1.0.3; python_version >= '3.5'
@@ -63,7 +67,7 @@ sphinxcontrib-jsmath==1.0.1; python_version >= '3.5'
 sphinxcontrib-qthelp==1.0.3; python_version >= '3.5'
 sphinxcontrib-serializinghtml==1.1.4; python_version >= '3.5'
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-typed-ast==1.4.2
+typed-ast==1.4.3
 typing-extensions==3.7.4.3
 urllib3==1.26.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-virtualenv==20.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+virtualenv==20.4.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
