ci: update workflow to generate coverage report as XML
The CodeClimate reporter need either to generate the report or to have a location set to fetch the
desired report. This change updates the script to generate the coverage.py report as a XML and pass
that location to the CC reporter.

--- a/.github/workflows/pyhon-packaging.yml
+++ b/.github/workflows/pyhon-packaging.yml
@@ -36,8 +36,10 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --cov .
+        pytest --cov . --cov-report xml
     - name: Upload test results to CodeClimate
       uses: paambaati/codeclimate-action@v2.7.5
       env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      with:
+        coverageLocations: ${{github.workspace}}/*.xml:coverage.py
